2004-05-28  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* gst/elements    : gstaggregator.c gstfakesink.c gstfakesrc.c
			    gstmd5sink.c gstshaper.c gsttee.c
			    gsttypefindelement.c
	* gst/schedulers  : gstbasicscheduler.c gstoptimalscheduler.c

	  - removing trailing commas at end of enums
	    it is correct C99 code but C90 compilers would complain
	    (AIX, Forte, ...)
	    ('should' fix #143290, at least partially)

2004-05-27  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (remove_from_chain),
	(chain_group_set_enabled), (create_group), (add_to_group),
	(merge_groups), (setup_group_scheduler), (group_elements),
	(gst_opt_scheduler_iterate), (gst_opt_scheduler_show):
	Don't try to follow the pad connections with other groups
	when a loop based element is added to the scheduler because
	the bin will inform the scheduler about the pad links a little
	later.

2004-05-27  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (add_to_chain),
	(remove_from_chain), (chain_group_set_enabled),
	(setup_group_scheduler), (group_element_set_enabled),
	(gst_opt_scheduler_state_transition), (gst_opt_scheduler_iterate),
	(gst_opt_scheduler_show):
	Elements without a group can do a state change as well, just wait
	with the setup of the scheduling function when it is added to a
	chain.

2004-05-27  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (add_to_chain),
	(remove_from_chain), (chain_group_set_enabled), (add_to_group),
	(merge_groups), (setup_group_scheduler),
	(group_inc_links_for_element), (gst_opt_scheduler_iterate),
	(gst_opt_scheduler_show):
	Fixes to maintain internal consistency of the scheduler data
	structures. 
	 - adding an enabled group to a chain should increment the
	   number of enabled elements in that chain.
         - removing an enabled group from a chain could disable the
	   chain.
	 - removing a disabled group from a chain could enable the
	   chain.