@@ -1,3 +1,9 @@
+2004-06-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/gst.c: (parse_debug_list), (gst_init_check_with_popt_table):
+	  check GST_DEBUG environment variable which is parsed the same way
+	  as --gst-debug=
+
 2004-05-28  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>
 
 	* gst/elements    : gstaggregator.c gstfakesink.c gstfakesrc.c
